tests/valid/01_hello.mini0
// Programa basico con funcion main

fun main()
    x: int
    x = 42
end