tests/invalid/04_parentesis.mini0
// Parentesis no balanceados

fun main()
    x: int
    x = (2 + 3
end